Create REST API for Create/Update/Delete Financial Accounts and List all Accounts by User. Fixed REST API naming collision.
