# v-wallet-api/Models/FinancialAccount.cs
@@ -8,7 +8,7 @@
         public decimal InitialValue { get; set; }
         public decimal CurrentValue { get; set; }
         public FinancialAccountType AccountType { get; set; }
-        public Guid CurrencyId { get; set; }
+        public string Currency { get; set; }
         public Guid UserProfileId { get; set; }
     }
 }
